# fairness-privacy-trade-offs

./: .gitignore  README.md  mnist_fedavg_dp.sh  mnist_fedavg_non_dp.sh  mnist_q-fedavg_non_dp.sh  pyproject.toml  reporting.py  requirements.txt
output/2026-06-30/14-58-54/: results.json  run_config.json
output/2026-06-30/15-04-15/: results.json  run_config.json
pytorchexample/: client_app.py  server_app.py  task.py
pytorchexample/models/: fashion_mnist.py  mnist.py
source/: attacks.py  client_app.py  server_app.py
source/models/: adult.py  fashion_mnist.py  femnist.py  mnist.py  net.py
source/strategies/: boundedclipping.py  custom.py  customdpadaptiveclip.py  customdpfixedclip.py  customqfedavg.py
source/utils/: client.py  datasets.py  models.py  reporting.py  server.py
strategies/: boundedclipping.py  custom.py  customdpadaptiveclip.py  customdpfixedclip.py  customqfedavg.py
utils/: client.py  datasets.py  models.py  reporting.py  server.py  strategy.py
