[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quickstart-pytorch"
version = "1.1.3"
description = "Federated Learning with PyTorch and Flower (Quickstart Example)"
license = {file = "LICENSE"}
dependencies = [
    "flwr[simulation]>=1.28.0",
    "flwr-datasets[vision]>=0.6.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "opacus==1.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"
fab-format-version = 1
flwr-version-target = "1.30.0"

[tool.flwr.app.components]
serverapp = "pytorchexample.server_app:app"
clientapp = "pytorchexample.client_app:app"

[tool.flwr.app.config]
# Server Params
num-server-rounds = 20
fraction-evaluate = 0.5
fraction-train = 0.5
save-model = false
# DP Settings
epsilon = 1.0
delta = 1e-5
max-grad-norm = 1.2
max-physical-batch-size = 32
dp-enabled = 0
# Parameters for the partitioner
alpha = 1
batch-size = 256
min-partition-size = 128
# Training Parameters
local-epochs = 1
learning-rate = 0.001


