[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quickstart-pytorch"
version = "1.1.3"
description = "Federated Learning with PyTorch and Flower (Quickstart Example)"
license = {file = "LICENSE"}
dependencies = [
    "flwr[simulation]>=1.31.0",
    "flwr-datasets[vision]>=0.6.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "opacus==1.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"
fab-format-version = 1
flwr-version-target = "1.32.0"

[tool.flwr.app.components]
serverapp = "pytorchexample.server_app:app"
clientapp = "pytorchexample.client_app:app"

[tool.flwr.app.config]
# Server Params
num-server-rounds = 5
fraction-evaluate = 0.2
fraction-train = 0.2
save-model = false
strategy = "fedavg"
min-available-nodes = 10
q = 0.005
# DP Settings
epsilon = 8.0
delta = 1e-5
max-grad-norm = 1.2
max-physical-batch-size = 32
dp-enabled = true
dp-mode = "local"
clipping-mode = "flat"
clipping-lower-bound = 0.1
# Parameters for the partitioner
alpha = 0.5
batch-size = 64
min-partition-size = 32
# Training Parameters
local-epochs = 3
learning-rate = 0.001
# Ditto Parameters
ditto = true
ditto-lr = 0.001
ditto-local-epochs = 1
ditto-lambda = 0.01


